# pipecat-flows

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/skills/update-docs/: SKILL.md  SOURCE_DOC_MAPPING.md
.github/workflows/: update-docs.yml
changelog/: 241.changed.md
docs/api/: pipecat_flows.actions.rst  pipecat_flows.adapters.rst  pipecat_flows.exceptions.rst  pipecat_flows.manager.rst  pipecat_flows.rst  pipecat_flows.types.rst
examples/: food_ordering.py  food_ordering_direct_functions.py  insurance_quote.py  llm_switching.py  patient_intake.py  podcast_interview.py  restaurant_reservation.py  restaurant_reservation_direct_functions.py  utils.py  warm_transfer.py
examples/quickstart/: hello_world.py
src/pipecat_flows/: __init__.py  actions.py  adapters.py  manager.py  types.py
tests/: test_actions.py  test_adapters.py  test_context_strategies.py  test_flows_direct_functions.py  test_manager.py
